Add about us page

--- a/app/views/pages/about_us.html.slim
+++ b/app/views/pages/about_us.html.slim
@@ -1,5 +1,5 @@
-- provide(:main_title_primary, 'About Us')
-- provide(:main_title_secondary, 'Meet our attorneys')
+- provide(:main_title_primary, 'Về chúng tôi')
+- provide(:main_title_secondary, 'Khang Hai & Partners')
 - breadcrumb :about_us
 
 #pages-about-us-container
@@ -8,19 +8,16 @@
       main#main.site-main.col-xs-12 role='main'
         .row
           .vision-and-mission
-            .col-md-6
+            .col-md-12
               .our-vision
-                h3.widget-title
-                  span.widget-title__inline Our Vision
-                .textwidget
-                  p Founded in 1979, our firm has been providing effective, affordable and often untraditional legal solution to our hundreds and thousands of clients over the years. Our law firm consists of remarkable team of expert trial attorneys in just about every field of law you can name, and it is because of this comprehensive nature of the legal services we provide, our firm has been able to stay ahead of its league for decades.
+								h3.widget-title
+									span.widget-title__inline Giới thiệu công ty
 
-            .col-md-6
-              .our-mission
-                h3.widget-title
-                  span.widget-title__inline Our Mission
-                .textwidget
-                  p Headed by one of the most distinguished and experienced lawyers in the country, George Hilton, our firm have a sound base in the law fraternity, and we aim to put our resources to effective use for the success of our clients. Backed by hundreds of successful cases in different fields of law, and having being the preferred law firm for many Fortune 500 companies, you can rest assured that your case is in safe hands with.
+								p Khang Hai & Partners là công ty luật độc lập với sự kết hợp của tư vấn pháp lý và tham gia tranh tụng. Chúng tôi luôn chú trọng vào sự cam kết của mình là cung cấp dịch vụ trọn gói cho quý khách hàng trong nước và quốc tế, nhờ đó có thể giúp khách hàng giảm thiểu các chi phí hành chính để tập trung vào những hoạt động kinh doanh chủ yếu của khách hàng.
+								p Từ nhóm Luật sư công tác tại Phòng Pháp chế Cảng Sài Gòn, năm 2012 chúng tôi tự tin thành lập Khang Hai & Partners. Trong suốt giai đoạn hình thành vàhát triểnhương châm hoạt động của chúng tôi vẫn giữ mãi tinh thần “khởi nghiệp” và duy trì mục tiêu rõ ràng - Tất cả vì sự hài lòng của khách hàng, đáp ứng các yêu cầu của khách hàng bằng một dịch vụ năng động và hiệu quả. Chúng tôi tự hào trong việc xử lý các vấn đề kinh doanh của khách hàng như là những vấn đề của chính chúng tôi. Chúng tôi rất vinh dự đã đóng góp một vai trò đáng kể trong nhiều thành tựu của khách hàng và sẵn sàng chia sẻ các kiến thức pháp lý đảm bảo an toàn cho hoạt động kinh doanh của khách hàng. Chúng tôi tự tin vào vị trí của mình đối với sự thành công trong tương lai và chúng tôi rất mong được làm việc với quý khách hàng trong việc đối đầu với những thử thách kinh doanh của khách hàng trong thời gian tới.
+								p Đến nay chúng tôi đã hiện diện mạnh mẽ tại Thành phố Hồ Chí Minh và các tỉnh thành trong cả nước. Việc bổ sung Luật sư cộng sự đã giúp chúng tôi có thêm kinh nghiệm trong các lĩnh vực hoạt động then chốt đểhục vụ khách hàng. Từ lĩnh vực chủ yếu tư vấn hoạt động của doanh nghiệp đến nay chúng tôi tự tin mở rộng các lĩnh vực Bất động sản, Bảo hiểm, Tranh Tụng, Hàng hải, Tranh tụng Thu hồi Nợ và Các vấn đề về Dân sự. Với đội ngũ nhân sự chuyên nghiệp của Khang Hai & Partners gồm 04 luật sư; 03 Trợ lý luật sư và 15 cộng tác viên (tất cả đều tốt nghiệp tại Đại học Luật Thànhhố Hồ Chí Minh).
+								p Ngoài ra, Khang Hai & Partners còn duy trì mối quan hệ chặt chẽ với các cơ quan tiến hành tố tụng của Thành phố Hồ Chí Minh và Bộ Công an, TAND Cấp cao tại Thành phố Hồ Chí Minh nên việc xử lý các yêu cầu của khách hàng luôn đảm bảo tiến độ và có hiệu quả được quý khách hàng đánh giá rất cao.
+								p Chúng tôi rất ước muốn được hợp tác và đồng hành trong hoạt động sản xuất kinh doanh của quý khách hàng, hãy liên lạc với chúng tôi qua số điện thoại (+84) 37100638 - Hotline 0909.703.706 để xem cách thức mà chúng tôi có thể thỏa mãn các yêu cầu pháp lý của các bạn.
 
             .clearfix
 
