Update content of sliders

--- a/app/views/home/_slider.html.slim
+++ b/app/views/home/_slider.html.slim
@@ -4,14 +4,12 @@
       = image_tag 'sliders/pic1.jpg'
       .container
         .content
-          .headline Law firm with tradition
+          .headline Khang Hai & Partners
           .title
-            h1 We practice law since 18th century.
+            h1 5 năm kinh nghiệm làm việc trong lĩnh vực pháp lý
           .description
             p
-              | It follow from this that benefits. Among the numerous fault of those who pass their there is
-              br
-              | Among the neither know how to bestow
+              | Chúng tôi luôn mong muốn đem lại sự hợp tác tốt nhất và cùng chia sẻ thành công cũng như kinh nghiệm đến với khách hàng.
             p
               = link_to 'Liên hệ', contact_us_path, class: 'btn btn-raised btn-primary'
               | &nbsp;
