--- a/app/views/home/_team.html.slim
+++ b/app/views/home/_team.html.slim
@@ -3,8 +3,8 @@
     .row
       .col-md-3
         .widget
-          h3.title Meet the team
-          p.subtitle Headed by one of the most distinguished and experienced lawyers in the country, George Hilton, our firm have a sound base in the law fraternity, and we aim to put our resources to effective use for the success of our clients. Backed by hundreds of successful cases in different fields of law, and having being the preferred law firm for many Fortune 500 companies, you can rest assured that your case is in safe hands with us.
+          h3.title Đội ngũ
+          p.subtitle Từ nhóm Luật sư công tác tại Phòng Pháp chế Cảng Sài Gòn, năm 2012 chúng tôi tự tin thành lập Khang Hai & Partners. Kể từ khi thành lập tới nay, với tiềm năng sẵn có về sự nhiệt huyết, sáng tạo của đội ngũ luật sư, cộng sự và sự nhạy bén, dày dạn kinh nghiệm từ Ban Lãnh đạo, Khang Hai & Partners đã không ngừng nỗ lực phấn đấu, đổi mới, ngày một lớn mạnh với từng bước đi vững chắc, gây dựng niềm tin ở các nhà đầu tư và tạo sự tín nhiệm đối với khách hàng.
           p
             = link_to about_us_path, class: 'read-more' do
               = fa_icon "long-arrow-right", text: 'Read more', right: true
