--- a/app/views/home/_our_services.html.slim
+++ b/app/views/home/_our_services.html.slim
@@ -9,4 +9,4 @@
                 = fa_icon 'university'
                 .content
                   h4.title = service.title
-                  span.subtitle = service.content.truncate(100)
+                  span.subtitle == service.content.truncate(100)
