--- a/app/views/home/_internship.html.slim
+++ b/app/views/home/_internship.html.slim
@@ -2,8 +2,8 @@
   .container
     .call-to-action
       .text
-        .title Want to be an intern at our law firm?
-        .subtitle Sign up now and get your internship!
+        .title Bạn muốn thực tập ở công ty chúng tôi?
+        .subtitle Hãy liên hệ chúng tôi ngay
       .buttons
-        = link_to 'APPLY NOW', '#', class: 'btn btn-raised btn-primary btn-apply-now'
-        = link_to 'READ MORE', '#', class: 'btn btn-raised btn-default'
+        = link_to 'Liên hệ', '#', class: 'btn btn-raised btn-primary btn-apply-now'
+        = link_to 'Xem thêm', '#', class: 'btn btn-raised btn-default'
