--- a/app/views/home/_our_pathway.html.slim
+++ b/app/views/home/_our_pathway.html.slim
@@ -2,11 +2,9 @@
   .container
     .row
       .col-md-8.col-md-offset-2
-        h3 Our Pathway
+        h3 Triết lý hành nghề
         p
           span
-            strong OUR CEO'S WORDS
+            strong LỜI NHẮN TỪ GIÁM ĐỐC CÔNG TY
         hr.hr-quote
-        p.quote We are passionate about the law and providing successful outcomes for our clients. Our promise to all our clients is to offer the very best legal advice and to consistently exceed your expectations.
-        p
-          = image_tag 'signature.png'
+        p.quote Thành công không phải là đích đến cuối cùng, thất bại cũng chẳng phải vực sâu thăm thẳm, đó chỉ là động lực để bạn vững vàng hơn trên con đường sắp bước.
