--- a/app/views/home/_slider.html.slim
+++ b/app/views/home/_slider.html.slim
@@ -19,14 +19,12 @@
       = image_tag 'sliders/pic2.jpg'
       .container
         .content
-          .headline Law firm with tradition
+          .headline Khang Hai & Partners
           .title
-            h1 We practice law since 18th century.
+            h1 Hãy yên tâm trao niềm tin của bạn nơi chúng tôi
           .description
             p
-              | It follow from this that benefits. Among the numerous fault of those who pass their there is
-              br
-              | Among the neither know how to bestow
+              | Với đội ngũ nhân sự dồi dào kinh nghiệm và tâm huyết với nghề. Yêu cầu của khách hàng sẽ luôn được đáp ứng một cách tốt nhất
             p
               = link_to 'Liên hệ', contact_us_path, class: 'btn btn-raised btn-primary'
               | &nbsp;
@@ -36,14 +34,12 @@
       = image_tag 'sliders/pic3.jpg'
       .container
         .content
-          .headline Law firm with tradition
+          .headline Khang Hai & Partners
           .title
-            h1 We practice law since 18th century.
+            h1 Hãy yên tâm trao niềm tin của bạn nơi chúng tôi
           .description
             p
-              | It follow from this that benefits. Among the numerous fault of those who pass their there is
-              br
-              | Among the neither know how to bestow
+              | Với đội ngũ nhân sự dồi dào kinh nghiệm và tâm huyết với nghề. Yêu cầu của khách hàng sẽ luôn được đáp ứng một cách tốt nhất
             p
               = link_to 'Liên hệ', contact_us_path, class: 'btn btn-raised btn-primary'
               | &nbsp;
