--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,6 @@
 @import "bootstrap-sass";
 @import "bootstrap-material-design";
+@import "sb-admin-2.min";
 @import "font-awesome";
 @import "slick";
 @import "slick-theme";
