Create new Admin panel

--- a/app/views/admin/customers/_form.html.slim
+++ b/app/views/admin/customers/_form.html.slim
@@ -4,4 +4,4 @@
   = f.input :permanent_address
   = f.input :contact_address
   = f.input :phone_number
-  = f.submit 'Submit', class: 'btn btn-default'
+  = f.submit t('shared.submit'), class: 'btn btn-default'
