--- a/app/views/admin/customers/index.html.slim
+++ b/app/views/admin/customers/index.html.slim
@@ -1,28 +1,30 @@
 .row
   .col-lg-12
-    h1.page-header Customer
+    h1.page-header = t('customer.index.heading')
 .row
   .col-lg-12
     .panel.panel-default
-      .panel-heading Customer
+      .panel-heading = t('customer.index.heading')
       .panel-body
         .row
           .col-lg-12
             .pull-right
-              = link_to 'Create Customer', new_admin_customer_path, class: 'btn btn-default'
+              = link_to t('customer.index.create'), new_admin_customer_path, class: 'btn btn-default'
 
             table.table.table-striped
               thead
                 tr
-                  th = Customer.human_attribute_name(:name)
-                  th = Customer.human_attribute_name(:birthday)
-                  th = Customer.human_attribute_name(:permanent_address)
-                  th = Customer.human_attribute_name(:contact_address)
-                  th = Customer.human_attribute_name(:phone_number)
-                  th Action
+                  th ID
+                  th = t('customer.name')
+                  th = t('customer.birthday')
+                  th = t('customer.permanent_address')
+                  th = t('customer.contact_address')
+                  th = t('customer.phone_number')
+                  th = t('shared.action')
               tbody
                 - @customers.each do |customer|
                   tr
+                    td = customer.id
                     td = customer.name
                     td = customer.birthday
                     td = customer.permanent_address
@@ -30,10 +32,9 @@
                     td = customer.phone_number
                     td
                       ul.list-inline
-                        li = link_to 'Show', [:admin, customer]
-                        li = link_to 'Edit', [:edit, :admin, customer]
-                        li = link_to 'Delete', '#', data: { toggle: 'confirmation', href: admin_customer_path(customer), placement: 'top' }, class: 'delete'
-                        / li = link_to 'Delete', admin_customer_path(customer), method: :delete, data: { confirm: 'Are you sure?' } 
+                        li = link_to t('shared.show'), [:admin, customer]
+                        li = link_to t('shared.edit'), [:edit, :admin, customer]
+                        li = link_to t('shared.delete'), admin_customer_path(customer), method: :delete, data: { confirm: t('shared.confirm_delete') } 
 
             .text-center
               = will_paginate @customers, renderer: BootstrapPagination::Rails, inner_window: 3, outer_window: 1
