--- a/app/views/admin/layouts/main.html.slim
+++ b/app/views/admin/layouts/main.html.slim
@@ -11,263 +11,48 @@ html lang="en"
             span.icon-bar
             span.icon-bar
             span.icon-bar
-          a.navbar-brand href="index.html" Khang Hai Admin v1.0
+          a.navbar-brand href='/' Khang Hai Admin v1.0
         /! /.navbar-header
         ul.nav.navbar-top-links.navbar-right
-          li.dropdown
-            a.dropdown-toggle data-toggle="dropdown" href="#" 
-              i.fa.fa-envelope.fa-fw
-              i.fa.fa-caret-down
-            ul.dropdown-menu.dropdown-messages
-              li
-                a href="#" 
-                div
-                  strong John Smith
-                  span.pull-right.text-muted
-                    em Yesterday
-                div Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque eleifend...
-              li.divider
-              li
-                a href="#" 
-                div
-                  strong John Smith
-                  span.pull-right.text-muted
-                    em Yesterday
-                div Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque eleifend...
-              li.divider
-              li
-                a href="#" 
-                div
-                  strong John Smith
-                  span.pull-right.text-muted
-                    em Yesterday
-                div Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque eleifend...
-              li.divider
-              li
-                a.text-center href="#" 
-                  strong Read All Messages
-                  i.fa.fa-angle-right
-            /! /.dropdown-messages
-          /! /.dropdown
-          li.dropdown
-            a.dropdown-toggle data-toggle="dropdown" href="#" 
-              i.fa.fa-tasks.fa-fw
-              i.fa.fa-caret-down
-            ul.dropdown-menu.dropdown-tasks
-              li
-                a href="#" 
-                div
-                  p
-                    strong Task 1
-                    span.pull-right.text-muted 40% Complete
-                  .progress.progress-striped.active
-                    .progress-bar.progress-bar-success aria-valuemax="100" aria-valuemin="0" aria-valuenow="40" role="progressbar" style=("width: 40%") 
-                      span.sr-only 40% Complete (success)
-              li.divider
-              li
-                a href="#" 
-                div
-                  p
-                    strong Task 2
-                    span.pull-right.text-muted 20% Complete
-                  .progress.progress-striped.active
-                    .progress-bar.progress-bar-info aria-valuemax="100" aria-valuemin="0" aria-valuenow="20" role="progressbar" style=("width: 20%") 
-                      span.sr-only 20% Complete
-              li.divider
-              li
-                a href="#" 
-                div
-                  p
-                    strong Task 3
-                    span.pull-right.text-muted 60% Complete
-                  .progress.progress-striped.active
-                    .progress-bar.progress-bar-warning aria-valuemax="100" aria-valuemin="0" aria-valuenow="60" role="progressbar" style=("width: 60%") 
-                      span.sr-only 60% Complete (warning)
-              li.divider
-              li
-                a href="#" 
-                div
-                  p
-                    strong Task 4
-                    span.pull-right.text-muted 80% Complete
-                  .progress.progress-striped.active
-                    .progress-bar.progress-bar-danger aria-valuemax="100" aria-valuemin="0" aria-valuenow="80" role="progressbar" style=("width: 80%") 
-                      span.sr-only 80% Complete (danger)
-              li.divider
-              li
-                a.text-center href="#" 
-                  strong See All Tasks
-                  i.fa.fa-angle-right
-            /! /.dropdown-tasks
-          /! /.dropdown
-          li.dropdown
-            a.dropdown-toggle data-toggle="dropdown" href="#" 
-              i.fa.fa-bell.fa-fw
-              i.fa.fa-caret-down
-            ul.dropdown-menu.dropdown-alerts
-              li
-                a href="#" 
-                div
-                  i.fa.fa-comment.fa-fw
-                  | New Comment
-                  span.pull-right.text-muted.small 4 minutes ago
-              li.divider
-              li
-                a href="#" 
-                div
-                  i.fa.fa-twitter.fa-fw
-                  | 3 New Followers
-                  span.pull-right.text-muted.small 12 minutes ago
-              li.divider
-              li
-                a href="#" 
-                div
-                  i.fa.fa-envelope.fa-fw
-                  | Message Sent
-                  span.pull-right.text-muted.small 4 minutes ago
-              li.divider
-              li
-                a href="#" 
-                div
-                  i.fa.fa-tasks.fa-fw
-                  | New Task
-                  span.pull-right.text-muted.small 4 minutes ago
-              li.divider
-              li
-                a href="#" 
-                div
-                  i.fa.fa-upload.fa-fw
-                  | Server Rebooted
-                  span.pull-right.text-muted.small 4 minutes ago
-              li.divider
-              li
-                a.text-center href="#" 
-                  strong See All Alerts
-                  i.fa.fa-angle-right
-            /! /.dropdown-alerts
-          /! /.dropdown
           li.dropdown
             a.dropdown-toggle data-toggle="dropdown" href="#" 
               i.fa.fa-user.fa-fw
               i.fa.fa-caret-down
             ul.dropdown-menu.dropdown-user
               li
-                a href="#" 
-                  i.fa.fa-user.fa-fw
-                  | User Profile
-              li
-                a href="#" 
-                  i.fa.fa-gear.fa-fw
-                  | Settings
+                = link_to admin_user_path(current_user) do
+                  = fa_icon 'user', text: 'User Profile'
               li.divider
               li
-                a href="login.html" 
-                  i.fa.fa-sign-out.fa-fw
-                  | Logout
-            /! /.dropdown-user
-          /! /.dropdown
-        /! /.navbar-top-links
+                = link_to destroy_user_session_path, method: :delete do
+                  = fa_icon 'sign-out', text: 'Sign out'
+
         .navbar-default.sidebar role="navigation" 
           .sidebar-nav.navbar-collapse
             ul#side-menu.nav
-              li.sidebar-search
-                .input-group.custom-search-form
-                  input.form-control placeholder="Search..." type="text" /
-                  span.input-group-btn
-                    button.btn.btn-default type="button" 
-                      i.fa.fa-search
-                /! /input-group
+              / li.sidebar-search
+              /   .input-group.custom-search-form
+              /     input.form-control placeholder="Search..." type="text" /
+              /     span.input-group-btn
+              /       button.btn.btn-default type="button" 
+              /         i.fa.fa-search
+
               li
-                = link_to 'Customers', admin_customers_path
+                = link_to t('admin.menu.customers'), admin_customers_path
               li
-                = link_to 'Contracts', admin_contracts_path
+                = link_to t('admin.menu.contracts'), admin_contracts_path
               li
-                a href="#" 
-                  i.fa.fa-bar-chart-o.fa-fw
-                  | Charts
-                  span.fa.arrow
-                ul.nav.nav-second-level
-                  li
-                    a href="flot.html"  Flot Charts
-                  li
-                    a href="morris.html"  Morris.js Charts
-                /! /.nav-second-level
+                = link_to t('admin.menu.services'), admin_services_path
               li
-                a href="tables.html" 
-                  i.fa.fa-table.fa-fw
-                  | Tables
+                = link_to t('admin.menu.posts'), admin_posts_path
               li
-                a href="forms.html" 
-                  i.fa.fa-edit.fa-fw
-                  | Forms
+                = link_to t('admin.menu.users'), admin_users_path
               li
-                a href="#" 
-                  i.fa.fa-wrench.fa-fw
-                  | UI Elements
-                  span.fa.arrow
-                ul.nav.nav-second-level
-                  li
-                    a href="panels-wells.html"  Panels and Wells
-                  li
-                    a href="buttons.html"  Buttons
-                  li
-                    a href="notifications.html"  Notifications
-                  li
-                    a href="typography.html"  Typography
-                  li
-                    a href="icons.html"  Icons
-                  li
-                    a href="grid.html"  Grid
-                /! /.nav-second-level
+                = link_to t('admin.menu.categories'), admin_categories_path
               li
-                a href="#" 
-                  i.fa.fa-sitemap.fa-fw
-                  | Multi-Level Dropdown
-                  span.fa.arrow
-                ul.nav.nav-second-level
-                  li
-                    a href="#"  Second Level Item
-                  li
-                    a href="#"  Second Level Item
-                  li
-                    a href="#" 
-                      | Third Level
-                      span.fa.arrow
-                    ul.nav.nav-third-level
-                      li
-                        a href="#"  Third Level Item
-                      li
-                        a href="#"  Third Level Item
-                      li
-                        a href="#"  Third Level Item
-                      li
-                        a href="#"  Third Level Item
-                    /! /.nav-third-level
-                /! /.nav-second-level
-              li.active
-                a href="#" 
-                  i.fa.fa-files-o.fa-fw
-                  | Sample Pages
-                  span.fa.arrow
-                ul.nav.nav-second-level
-                  li
-                    a.active href="blank.html"  Blank Page
-                  li
-                    a href="login.html"  Login Page
-                /! /.nav-second-level
-          /! /.sidebar-collapse
-        /! /.navbar-static-side
-      /! Page Content
+                = link_to t('admin.menu.contacts'), admin_contacts_path
+
       #page-wrapper
         = yield
-      /! /#page-wrapper
-    /! /#wrapper
-    /! jQuery
-    / script src="../vendor/jquery/jquery.min.js" 
-    /! Bootstrap Core JavaScript
-    / script src="../vendor/bootstrap/js/bootstrap.min.js" 
-    /! Metis Menu Plugin JavaScript
-    / script src="../vendor/metisMenu/metisMenu.min.js" 
-    /! Custom Theme JavaScript
-    / script src="../dist/js/sb-admin-2.js" 
+
     = javascript_initialization
