--- a/app/views/admin/posts/new.html.slim
+++ b/app/views/admin/posts/new.html.slim
@@ -1,10 +1,10 @@
 .row
   .col-lg-12
-    h1.page-header = t('customer.new.heading')
+    h1.page-header = t('post.new.heading')
 .row
   .col-lg-12
     .panel.panel-default
-      .panel-heading = t('customer.new.heading')
+      .panel-heading = t('post.new.heading')
       .panel-body
         .row
           .col-lg-6
