Localize for Vietnamese and refactor page

--- a/app/assets/stylesheets/admin.scss
+++ b/app/assets/stylesheets/admin.scss
@@ -1,5 +1,6 @@
 @import 'bootstrap-sprockets';
-@import "bootstrap";
-@import "sb-admin-2.min";
-@import "metisMenu.min";
+@import 'bootstrap';
+@import 'sb-admin-2.min';
+@import 'metisMenu.min';
 @import 'font-awesome';
+@import 'bootstrap-datepicker3';
