--- a/app/views/admin/contracts/edit.html.slim
+++ b/app/views/admin/contracts/edit.html.slim
@@ -1,11 +1,11 @@
 .row
   .col-lg-12
-    h1.page-header Edit Contract
+    h1.page-header = t('contract.show.heading')
 .row
   .col-lg-12
     .panel.panel-default
-      .panel-heading Edit Contract
+      .panel-heading = t('contract.show.heading')
       .panel-body
         .row
-          .col-lg-6
+          .col-lg-12
             = render 'form'
