--- a/app/views/home/_clients.html.slim
+++ b/app/views/home/_clients.html.slim
@@ -4,7 +4,7 @@
       .col-md-12
         .widget-title--big
           h3.widget-title
-            span.widget-title__inline Important Clients
+            span.widget-title__inline = t('home_page.important_clients')
             span.widget-title__line
 
       .col-md-12
@@ -12,18 +12,18 @@
           .clients
             .col-xs-6.col-md-3
               .client
-                = image_tag 'client.png'
+                = image_tag 'clients/ltnh.png'
 
             .col-xs-6.col-md-3
               .client
-                = image_tag 'client.png'
+                = image_tag 'clients/mvs.png'
 
             .col-xs-6.col-md-3
               .client
-                = image_tag 'client.png'
+                = image_tag 'clients/nstl.png'
 
             .col-xs-6.col-md-3
               .client
-                = image_tag 'client.png'
+                = image_tag 'clients/sasteco.png'
 
             .clearfix
