--- a/app/views/home/_slider.html.slim
+++ b/app/views/home/_slider.html.slim
@@ -16,22 +16,7 @@
               = link_to 'Dịch vụ', services_path, class: 'btn btn-raised btn-default'
 
     .item
-      = image_tag 'sliders/pic2.jpg'
-      .container
-        .content
-          .headline Khang Hai & Partners
-          .title
-            h1 Hãy yên tâm trao niềm tin của bạn nơi chúng tôi
-          .description
-            p
-              | Với đội ngũ nhân sự dồi dào kinh nghiệm và tâm huyết với nghề. Yêu cầu của khách hàng sẽ luôn được đáp ứng một cách tốt nhất
-            p
-              = link_to 'Liên hệ', contact_us_path, class: 'btn btn-raised btn-primary'
-              | &nbsp;
-              = link_to 'Dịch vụ', services_path, class: 'btn btn-raised btn-default'
-
-    .item
-      = image_tag 'sliders/pic3.jpg'
+      = image_tag 'sliders/pic4.png'
       .container
         .content
           .headline Khang Hai & Partners
