--- a/app/views/admin/customers/show.html.slim
+++ b/app/views/admin/customers/show.html.slim
@@ -21,3 +21,14 @@
               tr
                 th = t('customer.contact_address')
                 td = @customer.contact_address
+              tr
+                th = t('shared.created_at')
+                td = format_datetime(@customer.created_at)
+              tr
+                th = t('shared.updated_at')
+                td = format_datetime(@customer.updated_at)
+
+            .pull-right
+              .btn-group
+                = link_to t('shared.edit'), edit_admin_customer_path(@customer), class: 'btn btn-default'
+                = link_to t('shared.delete'), admin_customer_path(@customer), method: :delete, data: { confirm: t('shared.confirm_delete') }, class: 'btn btn-default'
