--- a/app/views/admin/posts/_form.html.slim
+++ b/app/views/admin/posts/_form.html.slim
@@ -3,6 +3,6 @@
   = f.input :picture
   = f.input :category_id, as: :select, collection: Category.all.order(:name)
   = f.input :user_id, as: :select, collection: User.all
-  = f.input :content
+  = f.input :content, as: :ckeditor
   = f.input :slug
   = f.submit t('shared.submit'), class: 'btn btn-default'
