--- a/app/views/admin/services/new.html.slim
+++ b/app/views/admin/services/new.html.slim
@@ -1,11 +1,11 @@
 .row
   .col-lg-12
-    h1.page-header New Service
+    h1.page-header = t('service.new.heading')
 .row
   .col-lg-12
     .panel.panel-default
-      .panel-heading New Service
+      .panel-heading = t('service.new.heading')
       .panel-body
         .row
-          .col-lg-6
+          .col-lg-12
             = render 'form'
